<resources>
    <string name="app_name">SkeleKey</string>
    <string name="login_title">Login</string>
    <string name="profile_title">SkeleKey</string>
    <string name="add_record_title">Add a Record</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="add_success_message">Notch Created!</string>
    <string name="delete_success_message">Notch Removed!</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_match">Password does not match</string>

    <!-- Register Activity strings-->
    <string name="register_name">Register name</string>
    <string name="register_email">Register email</string>
    <string name="register_password">Register password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_button">REGISTER</string>
    <string name="already_login">Already a member?</string>
    <string name="register_image">register image</string>

    <!-- Add Record Activity strings-->
    <string name="add_new_name">Add new name</string>
    <string name="add_new_username">Add new username</string>
    <string name="add_new_password">Add new password</string>
    <string name="add_image">add image</string>
    <string name="add_button">ADD</string>

    <!-- Delete Record Activity strings-->
    <string name="delete_name">Delete name</string>
    <string name="delete_button">Delete</string>

    <!-- Login Activity strings-->
    <string name="email_login">email</string>
    <string name="password_login">password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_button">LOG IN</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up!</string>
    <string name="login_image">Image</string>

    <!-- Main Activity strings-->
    <string name="greeting">Hello,</string>
    <string name="accounts">My Accounts</string>
    <string name="title_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="action_add">Add</string>

    <!-- Slogan strings-->
    <string name="login_slogan">A small solution to a big problem!</string>
    <string name="registration_slogan">Setting up an account is easy!</string>
    <string name="add_record_slogan">Add a new notch to your key!</string>
    <string name="delete_slogan">Eliminate It!</string>
</resources>
