<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        tools:context=".Login">

        <ImageView
            android:id="@+id/login_page_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="128dp"
            android:contentDescription="@string/login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/skelekey_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:text="@string/login_slogan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_page_image" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="59dp"
                android:layout_marginBottom="34dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email_login"
                android:inputType="textWebEmailAddress"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="-32dp"
            android:layout_marginEnd="-32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="59dp"
                android:layout_marginBottom="34dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="387dp"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="108dp"
            android:layout_height="64dp"
            android:layout_marginStart="184dp"
            android:layout_marginEnd="183dp"
            android:background="@drawable/button_style"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        <TextView
            android:id="@+id/forgotPassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="167dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="166dp"
            android:text="@string/forgot_your_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/noAccount_text"
            android:layout_width="152dp"
            android:layout_height="18dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="24dp"
            android:text="@string/dont_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUp_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noAccount_text"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_text"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>