<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".AddRecord">

    <Button
        android:id="@+id/button_delete"
        android:layout_width="108dp"
        android:layout_height="64dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="184dp"
        android:background="@drawable/button_style"
        android:text="@string/delete_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="-32dp"
        android:layout_marginEnd="-32dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan">

        <EditText
            android:id="@+id/delete_name"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="59dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/delete_name"
            android:inputType="text"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="236dp"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="168dp"
        android:text="@string/delete_slogan"
        app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteImage" />

    <ImageView
        android:id="@+id/deleteImage"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintBottom_toTopOf="@+id/slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skelekey_delete_logo" />

</android.support.constraint.ConstraintLayout>